--- a/ticker.html
+++ b/ticker.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        body {
+            background-color:  #e2e1df; <!-- set this value to match your background color (#2f3437 is the default "dark" theme color) -->
+        }
+    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notion Widget Embed Template</title>
+</head>
+<body>
+  
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
@@ -38,4 +52,6 @@
 }
   </script>
 </div>
-<!-- TradingView Widget END -->
+<!-- TradingView Widget END -->  
+</body>
+</html>
