--- a/ticker.html
+++ b/ticker.html
@@ -46,12 +46,12 @@
   ],
   "showSymbolLogo": true,
   "colorTheme": "light",
-  "isTransparent": true,
+  "isTransparent": false,
   "displayMode": "regular",
   "locale": "en"
 }
   </script>
 </div>
-<!-- TradingView Widget END -->  
+<!-- TradingView Widget END -->
 </body>
 </html>
