--- a/ticker.html
+++ b/ticker.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color:  #e2e1df; <!-- set this value to match your background color (#2f3437 is the default "dark" theme color) -->
+            background-color:  #ffffff; <!-- set this value to match your background color (#2f3437 is the default "dark" theme color) -->
         }
     </style>
     <meta charset="UTF-8">
@@ -46,7 +46,7 @@
   ],
   "showSymbolLogo": true,
   "colorTheme": "light",
-  "isTransparent": false,
+  "isTransparent": true,
   "displayMode": "regular",
   "locale": "en"
 }
