--- a/ticker.html
+++ b/ticker.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color:  #ffffff; <!-- set this value to match your background color (#2f3437 is the default "dark" theme color) -->
+            background-color:  #ffffff;
         }
     </style>
     <meta charset="UTF-8">
@@ -46,8 +46,8 @@
   ],
   "showSymbolLogo": true,
   "colorTheme": "light",
-  "isTransparent": true,
-  "displayMode": "regular",
+  "isTransparent": false,
+  "displayMode": "adaptive",
   "locale": "en"
 }
   </script>
