--- a/ticker.html
+++ b/ticker.html
@@ -15,8 +15,8 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Ticker Tape</span></a> by TradingView</div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Quotes</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
   {
   "symbols": [
     {
@@ -28,26 +28,21 @@
       "title": "Ethereum"
     },
     {
-      "description": "Commbank",
-      "proName": "ASX:CBA"
-    },
-    {
       "description": "S&P/ASX 200",
       "proName": "ASX:XJO"
     },
     {
-      "description": "ASX Health Care",
+      "description": "Health Care",
       "proName": "ASX:XHJ"
     },
     {
-      "description": "Industrial",
-      "proName": "ASX:XNJ"
+      "description": "All Technology",
+      "proName": "ASX:XTX"
     }
   ],
-  "showSymbolLogo": true,
   "colorTheme": "light",
   "isTransparent": false,
-  "displayMode": "adaptive",
+  "showSymbolLogo": true,
   "locale": "en"
 }
   </script>
